Fix tag wrapping for new tumblr tag implementation

--- a/chrome/dashboardFixes/wrapTags.css
+++ b/chrome/dashboardFixes/wrapTags.css
@@ -21,15 +21,20 @@
  * along with 'Missing e'. If not, see <http://www.gnu.org/licenses/>.
  */
 
-span.tags {
+#posts .post .footer_links.with_tags span {
 display:inline !important;
+overflow:visible !important;
+}
+
+#posts .post .footer_links.with_tags .source_url {
+display:inline-block !important;
+overflow:hidden !important;
+}
+
+span.tags {
 white-space:normal !important;
 }
 
 span.with_blingy_tag a.blingy {
 display:inline-block !important;
-}
-
-#posts .post .footer_links.with_tags {
-overflow:visible !important;
 }
